...
    val keyword: Color,
    val atom: Color,
    val string: Color,
    val qualifier: Color,
    val type: Color,
    val comment: Color,
    val tag: Color,
    val attribute: Color,
    val link: Color,
    val header: Color,
    val quote: Color,
)

...
